mladedav.hestia.52533713a9ba2616a8f8f863a34fbaf7f53af75a
Running as unit: run-p2383320-i14963426.scope; invocation ID: 6e076c7501444c2ca103510598c3cd4e
   Compiling version_check v0.9.4
   Compiling proc-macro2 v1.0.36
   Compiling libc v0.2.116
   Compiling unicode-xid v0.2.2
   Compiling syn v1.0.92
   Compiling typenum v1.15.0
    Checking cfg-if v1.0.0
   Compiling autocfg v1.0.1
   Compiling generic-array v0.14.5
   Compiling log v0.4.17
   Compiling memchr v2.4.1
   Compiling serde_derive v1.0.137
   Compiling serde v1.0.137
   Compiling futures-channel v0.3.19
    Checking pin-project-lite v0.2.8
   Compiling futures-core v0.3.19
   Compiling quote v1.0.15
    Checking once_cell v1.10.0
    Checking bytes v1.1.0
    Checking itoa v1.0.1
   Compiling proc-macro2-diagnostics v0.9.1
   Compiling cc v1.0.72
   Compiling pkg-config v0.3.24
    Checking socket2 v0.4.4
    Checking mio v0.8.2
    Checking signal-hook-registry v1.4.0
    Checking num_cpus v1.13.1
   Compiling yansi v0.5.1
    Checking futures-sink v0.3.19
   Compiling subtle v2.4.1
   Compiling httparse v1.5.1
    Checking slab v0.4.5
   Compiling fnv v1.0.7
   Compiling futures-task v0.3.19
   Compiling futures-util v0.3.19
    Checking pin-utils v0.1.0
    Checking futures-io v0.3.19
   Compiling cpufeatures v0.2.2
   Compiling openssl-sys v0.9.72
    Checking http v0.2.6
   Compiling block-buffer v0.10.2
   Compiling crypto-common v0.1.3
   Compiling indexmap v1.8.0
   Compiling time-macros v0.2.3
   Compiling opaque-debug v0.3.0
    Checking lazy_static v1.4.0
    Checking tracing-core v0.1.21
   Compiling digest v0.10.3
   Compiling universal-hash v0.4.1
   Compiling cipher v0.3.0
   Compiling getrandom v0.2.4
   Compiling cookie v0.16.0
    Checking hashbrown v0.11.2
    Checking percent-encoding v2.1.0
   Compiling ref-cast v1.0.7
    Checking bitflags v1.3.2
   Compiling rand_core v0.6.3
   Compiling polyval v0.5.3
    Checking tracing v0.1.29
    Checking try-lock v0.2.3
   Compiling ppv-lite86 v0.2.16
   Compiling rand_chacha v0.3.1
    Checking want v0.3.0
   Compiling ghash v0.4.4
    Checking http-body v0.4.4
   Compiling ctr v0.8.0
   Compiling aes v0.7.5
   Compiling hmac v0.12.1
   Compiling aead v0.4.3
   Compiling uncased v0.9.6
   Compiling ucd-trie v0.1.3
    Checking foreign-types-shared v0.1.1
    Checking httpdate v1.0.2
   Compiling encoding_rs v0.8.30
   Compiling openssl v0.10.38
   Compiling num_threads v0.1.3
    Checking itoa v0.4.8
    Checking tower-service v0.3.1
   Compiling devise_core v0.3.1
   Compiling time v0.3.7
   Compiling tokio v1.18.2
   Compiling pest v2.1.3
    Checking foreign-types v0.3.2
   Compiling aes-gcm v0.9.4
   Compiling hkdf v0.12.3
   Compiling rand v0.8.4
   Compiling sha2 v0.10.2
   Compiling tokio-macros v1.7.0
   Compiling pear_codegen v0.2.3
   Compiling ref-cast-impl v1.0.7
   Compiling proc-macro-error-attr v1.0.4
   Compiling strsim v0.10.0
    Checking inlinable_string v0.1.15
   Compiling native-tls v0.2.8
   Compiling base64 v0.13.0
    Checking tinyvec_macros v0.1.0
    Checking matches v0.1.9
    Checking ryu v1.0.9
    Checking smallvec v1.8.0
   Compiling maplit v1.0.2
   Compiling parking_lot_core v0.9.3
   Compiling ident_case v1.0.1
    Checking cfg-if v0.1.10
   Compiling serde_json v1.0.81
    Checking net2 v0.2.37
   Compiling darling_core v0.13.4
   Compiling pear v0.2.3
   Compiling hyper v0.14.16
   Compiling pest_meta v2.1.3
    Checking tinyvec v1.5.1
   Compiling futures v0.3.19
   Compiling stable-pattern v0.1.0
    Checking tokio-util v0.6.9
   Compiling devise_codegen v0.3.1
    Checking iovec v0.1.4
   Compiling atomic v0.5.1
   Compiling multer v2.0.2
   Compiling figment v0.10.6
   Compiling proc-macro-error v1.0.4
    Checking same-file v1.0.6
   Compiling vcpkg v0.2.15
    Checking openssl-probe v0.1.5
    Checking mime v0.3.16
   Compiling either v1.6.1
    Checking scopeguard v1.1.0
   Compiling state v0.5.3
   Compiling async-trait v0.1.53
   Compiling rocket_http v0.5.0-rc.2
    Checking lock_api v0.4.6
   Compiling libsqlite3-sys v0.23.2
    Checking walkdir v2.3.2
    Checking mio v0.6.23
   Compiling devise v0.3.1
    Checking unicode-normalization v0.1.19
   Compiling darling_macro v0.13.4
   Compiling pest_generator v2.1.3
    Checking form_urlencoded v1.0.1
   Compiling async-stream-impl v0.3.3
    Checking toml v0.5.9
    Checking inotify-sys v0.1.5
   Compiling rocket v0.5.0-rc.2
    Checking h2 v0.3.11
   Compiling rustversion v1.0.6
    Checking fastrand v1.7.0
   Compiling glob v0.3.0
    Checking lazycell v1.3.0
    Checking remove_dir_all v0.5.3
    Checking spin v0.9.3
    Checking unicode-bidi v0.3.7
    Checking tempfile v3.3.0
    Checking idna v0.2.3
    Checking mio-extras v2.0.6
    Checking inotify v0.7.1
   Compiling pest_derive v2.1.0
    Checking async-stream v0.3.3
    Checking parking_lot v0.12.0
    Checking ubyte v0.10.1
   Compiling rocket_codegen v0.5.0-rc.2
   Compiling darling v0.13.4
    Checking tokio-native-tls v0.3.0
    Checking tokio-util v0.7.1
    Checking tokio-stream v0.1.8
    Checking atty v0.2.14
    Checking filetime v0.2.16
    Checking binascii v0.1.4
    Checking quick-error v2.0.1
    Checking notify v4.0.17
    Checking handlebars v4.2.2
   Compiling diesel_derives v2.0.0-rc.0
   Compiling serde_with_macros v1.5.2
    Checking url v2.2.2
    Checking serde_urlencoded v0.7.1
    Checking ipnet v2.3.1
    Checking normpath v0.3.2
    Checking serde_with v1.13.0
    Checking uuid v1.0.0
    Checking unicode-segmentation v1.9.0
    Checking hyper-tls v0.5.0
    Checking reqwest v0.11.10
    Checking rocket_dyn_templates v0.1.0-rc.2
    Checking diesel v2.0.0-rc.0
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.0.0-rc.0/src/query_builder/ast_pass.rs:204:51
    |
204 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
